--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Data Exploration in SQL<br />
+										<h2><a href="#">Data Exploration With SQL<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Covid.jpg" alt="" /></a>
