--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									<a href="#" class="image fit"><img src="images/Bike.jpg" alt="" /></a>
 									<p>Dashboard of Bike sale by Education Grade, Marital Status and Region.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/DonovanJRR/Portfolio/blob/main/Bike_Sales_Dashboard.xlsx" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
